k8s/mcp-endpointslice.yaml
apiVersion: v1
kind: EndpointSlice
metadata:
  name: infocepo-mcp-ext
  namespace: demo1
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"addressType":"IPv4","apiVersion":"discovery.k8s.io/v1","endpoints":[{"addresses":["192.168.1.149"],"conditions":{"ready":true}}],"kind":"EndpointSlice","metadata":{"annotations":{},"labels":{"endpointslice.kubernetes.io/managed-by":"staff","kubernetes.io/service-name":"infocepo-mcp-ext"},"name":"infocepo-mcp-ext","namespace":"demo1"},"ports":[{"name":"http","port":8085,"protocol":"TCP"}]}
  labels:
    endpointslice.kubernetes.io/managed-by: staff
    kubernetes.io/service-name: infocepo-mcp-ext
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.1.149"
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: http
    port: 8085
    protocol: TCP
